@startuml

title __POLYMORPHISMUS's Class Diagram__\n

  namespace  {
    class Abrechnung {
    }
  }
  

  namespace  {
    class Angestellter {
    }
  }
  

  namespace  {
    class Arbeiter {
    }
  }
  

  namespace  {
    class Maneger {
    }
  }
  

  namespace  {
    class Mitarbeiter {
    }
  }
  

  Angestellter -up-|> Mitarbeiter
  Arbeiter -up-|> Mitarbeiter
  Maneger -up-|> Mitarbeiter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
